--- a/dog-api/index.html
+++ b/dog-api/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <h1>Play with dog api</h1>
-    
+
+    <!-- js script  -->
     <script src="js/index.js"></script>
 </body>
 </html>
