--- a/dog-api/index.html
+++ b/dog-api/index.html
@@ -11,7 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Play with dog api</h1>
+    <h1>Play with Dog API</h1>
+    <button class="btn btn-primary" onclick="loadDog()">Load the Dogs</button>
 
     <!-- js script  -->
     <script src="js/index.js"></script>
