--- a/dog-api/index.html
+++ b/dog-api/index.html
@@ -14,6 +14,9 @@
     <h1>Play with Dog API</h1>
     <button class="btn btn-primary" onclick="loadDog()">Load the Dogs</button>
 
+    <div id="main" class="row">
+        
+    </div>
     <!-- js script  -->
     <script src="js/index.js"></script>
 </body>
