comment added for details div

--- a/dog-api/index.html
+++ b/dog-api/index.html
@@ -14,9 +14,10 @@
     <h1>Play with Dog API</h1>
     <button class="btn btn-primary" onclick="loadDog()">Load the Dogs</button>
 
+    <!-- display dog details from the dog api -->
     <div id="main" class="row">
-        
     </div>
+    
     <!-- js script  -->
     <script src="js/index.js"></script>
 </body>
