--- a/cards-api/index.html
+++ b/cards-api/index.html
@@ -21,6 +21,7 @@
             <input id="input-value" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
         </div>
+        <h2 class="text-danger text-center" id="error"></h2>
     </div>
 
     <!-- script  -->
