display card on UI

--- a/cards-api/index.html
+++ b/cards-api/index.html
@@ -21,7 +21,13 @@
             <input id="input-value" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
         </div>
+        <!-- error message -->
         <h2 class="text-danger text-center" id="error"></h2>
+
+        <!-- display data dynamically -->
+        <div id="main">
+
+        </div>
     </div>
 
     <!-- script  -->
