details part added

--- a/cards-api/index.html
+++ b/cards-api/index.html
@@ -25,7 +25,7 @@
         <h2 class="text-danger text-center" id="error"></h2>
 
         <!-- display data dynamically -->
-        <div id="main">
+        <div class="row" id="main">
 
         </div>
     </div>
