--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <section class="container w-50 mx-auto border rounded-3 border-info shadow-lg p-5 mt-5">
-        <h1 class="text-danger text-center"><span class="text-info">Dog API</span> and <span class="text-info">Card
+        <h1 class="text-danger text-center"><span class="text-info">Dog API</span> and <span class="text-info">Cards
                 API</span> Projects</h1>
         <div class="d-flex justify-content-center gap-3 mt-5">
             <a href="https://kamrul-dev.github.io/api-conceptual/dog-api/index.html" type="button"
